fixing layout problem that was causing a scroll

--- a/client-reactjs/src/index.css
+++ b/client-reactjs/src/index.css
@@ -489,7 +489,7 @@ div.tooltip {
 }
 
 .show-column {
-  display: block;
+  display: table-cell;
 }
 
 .overflow-hidden > * {
